--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 body{
     display: flex;
     align-items: center;
+    margin: 0;
     justify-content: center;
     height: 100vh;
 }
@@ -20,8 +21,8 @@ body{
     align-items: center;
     justify-content: center;
     width: 670px;
+    margin: 0;
     font-weight: 1px;
-    margin-right: 100px;
     height: 200px;
     border-radius: 40px;
     background: #3B3B35;
